--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,9 @@ version: 1.0.0+1
 environment:
   sdk: ">=3.0.0 <4.0.0"
 
+dev_dependencies:
+  flutter_launcher_icons: ^0.14.4
+
 dependencies:
   flutter:
     sdk: flutter
@@ -12,5 +15,11 @@ dependencies:
   file_picker: ^10.2.0
   csv: ^6.0.0
   flutter_hooks: ^0.21.2
+
 flutter:
   uses-material-design: true
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/piazzola_sul_brenta-stemma.png"
